--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Testprov</title>
   </head>
   <body>
+    <ul id="user-list"></ul>
+    <select name="user-select" id="user-select"></select>
+    <div id="email-output"></div>
     <script src="question1.js"></script>
     <script src="question2.js"></script>
     <script src="question3.js"></script>
